fix: Fixxing text

--- a/calculator/templates/calculate.html
+++ b/calculator/templates/calculate.html
@@ -8,8 +8,8 @@ We do a bit of calculating here
 </p>
 
 <form action="calculate">
-    Enter your weight: <input type="text" name="weight"><br>
-    Enter your height: <input type="text" name="height"><br>
+    Enter your weight(pounds): <input type="text" name="weight"><br>
+    Enter your height(inches): <input type="text" name="height"><br>
     <input type="submit">
 </form>
 
